# SecureNet

./: .gitignore  Cargo.toml  LICENSE  deny.toml  flake.nix
api-gateway/: Cargo.toml
api-gateway/src/: jwt.rs  main.rs  middleware.rs
order-service/: Cargo.toml
order-service/src/: main.rs
securenet/: validate.sh
securenet/api-gateway/: Cargo.toml
securenet/shared/: Cargo.toml
securenet/shared/src/: chaos.rs  errors.rs  models.rs  rotation.rs  telemetry.rs
securenet/user-service/: Cargo.toml
securenet/vault-service/src/: main.rs  routes.rs
shared/src/: attestation.rs  boot.rs  identity.rs  lib.rs  models.rs  rotation.rs  tls.rs  vault_client.rs
user-service/: Cargo.toml
user-service/src/: main.rs
vault-service/: Cargo.toml  allowlist.toml
vault-service/bootstrap/: gen-bootstrap-cert.sh
vault-service/src/: attestation_verifier.rs  issuer.rs  log.rs  main.rs  routes.rs  state.rs
