[package]
name    = "api-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[features]
default = []
chaos   = ["shared/chaos"]

[dependencies]
shared = { path = "../shared" }

tokio.workspace        = true
axum.workspace         = true
tower.workspace        = true
tower-http.workspace   = true
rustls.workspace       = true
rustls-pemfile.workspace = true
reqwest.workspace      = true
jsonwebtoken.workspace = true
serde.workspace        = true
serde_json.workspace   = true
tracing.workspace      = true
tracing-subscriber.workspace = true
uuid.workspace         = true
chrono.workspace       = true
bcrypt.workspace       = true
thiserror.workspace    = true
anyhow.workspace       = true
rand.workspace         = true
hyper.workspace                  = true
hyper-util.workspace             = true
tokio-rustls.workspace           = true
rsa.workspace                    = true
tracing-opentelemetry            = { workspace = true }
opentelemetry.workspace          = true
