[package]
name    = "order-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "order-service"
path = "src/main.rs"

[features]
default = []
chaos   = ["shared/chaos"]

[dependencies]
shared = { path = "../shared" }

tokio.workspace        = true
axum.workspace         = true
tower.workspace        = true
tower-http.workspace   = true
rustls.workspace       = true
reqwest.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
tracing.workspace      = true
uuid.workspace         = true
chrono.workspace       = true
thiserror.workspace    = true
anyhow.workspace       = true
hyper.workspace          = true
hyper-util.workspace     = true
tokio-rustls.workspace   = true
