[package]
name    = "vault-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vault-service"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

tokio.workspace        = true
axum.workspace         = true
tower.workspace        = true
tower-http.workspace   = true
rustls.workspace       = true
rustls-pemfile.workspace = true
serde.workspace        = true
serde_json.workspace   = true
toml.workspace         = true
tracing.workspace      = true
uuid.workspace         = true
chrono.workspace       = true
thiserror.workspace    = true
anyhow.workspace       = true
sha2.workspace         = true
hex.workspace          = true
rand.workspace         = true

# x509 certificate generation — vault is the only service that signs certs
rcgen = { workspace = true }
time  = { workspace = true }
