[package]
name    = "shared"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable chaos middleware — injected at compile time, zero cost when disabled
chaos   = []

[dependencies]
# Async
tokio.workspace        = true

# HTTP / middleware
axum.workspace         = true
tower.workspace        = true
tower-http.workspace   = true

# TLS
rustls.workspace       = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true

# HTTP client
reqwest.workspace      = true

# JWT
jsonwebtoken.workspace = true

# Serialization
serde.workspace        = true
serde_json.workspace   = true

# Observability
tracing.workspace              = true
tracing-subscriber.workspace   = true
opentelemetry.workspace        = true
opentelemetry_sdk.workspace    = true
opentelemetry-otlp.workspace   = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true

# Crypto / identity
sha2.workspace         = true
uuid.workspace         = true
chrono.workspace       = true

# Error handling
thiserror.workspace    = true
anyhow.workspace       = true

# Misc
rand.workspace         = true
hex.workspace          = true
async-trait            = { workspace = true }
